# ferrum-gate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  QWEN.md  README.md  docker-compose.vps.yml  docker-compose.yml  package.json  vps.env.example
.github/workflows/: ci.yml  publish-images.yml
apps/control-plane/: Cargo.toml
apps/control-plane/src/: lib.rs  main.rs  poller.rs
apps/gateway-http/: Cargo.toml
apps/gateway-http/src/: lib.rs  main.rs  openai_http.rs  tests.rs
apps/gateway-http/src/core/: execution_engine.rs  mod.rs  route_resolver.rs  types.rs
apps/gateway-http/src/middleware/: auth.rs  mod.rs  request_id.rs
apps/gateway-http/src/protocols/anthropic/: mod.rs  request.rs  response.rs  streaming.rs
apps/gateway-http/src/protocols/openai/: mod.rs  request.rs  response.rs  responses.rs  streaming.rs
apps/gateway-http/src/routes/: chat.rs  messages.rs  mod.rs  responses.rs
apps/tenant-api/: Cargo.toml
apps/tenant-api/src/: lib.rs  main.rs
crates/http-utils/: Cargo.toml
crates/http-utils/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/protocol-core/: Cargo.toml
crates/protocol-core/src/: lib.rs
crates/provider-anthropic/: Cargo.toml
crates/provider-anthropic/src/: lib.rs
crates/provider-core/: Cargo.toml
crates/provider-core/src/: lib.rs
crates/provider-openai-codex/: Cargo.toml
crates/provider-openai-codex/src/: lib.rs
crates/provider-qwen/: Cargo.toml  system_prompt.txt
crates/provider-qwen/src/: lib.rs  system_prompt.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory.rs  postgres.rs
crates/storage/tests/: postgres_integration.rs
docker/: backend.Dockerfile  nginx.Dockerfile
docker/nginx/: backend.conf  backend.conf.template
docker/nginx/entrypoint/: 40-basic-auth.sh
docs/: architecture.md  protocol-tdd-plan.md
migrations/: 0001_initial.sql  0002_api_key_expires_at.sql
web/tenant-console/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/tenant-console/scripts/: verify-public-build-no-admin-secrets.mjs
web/tenant-console/src/: app.tsx  index.css  main.tsx  router.test.tsx  router.tsx
web/tenant-console/src/components/: api-key-secret-card.tsx  app-shell.tsx  dashboard-metric.tsx  language-switcher.tsx  mobile-sidebar-overlay.tsx  page-header.tsx  sidebar.tsx  status-badge.tsx  top-bar.tsx
web/tenant-console/src/components/ui/: button.tsx  dialog.tsx  form.tsx  label.tsx  sonner.tsx
web/tenant-console/src/hooks/: use-control-plane-queries.ts  use-gateway-queries.ts  use-invalidate-workspace.ts  use-session-credentials.ts  use-tenant-queries.ts
web/tenant-console/src/i18n/: index.ts  types.d.ts
web/tenant-console/src/i18n/locales/: en-US.ts  zh-CN.ts
web/tenant-console/src/lib/: control-plane-api.ts  env.test.ts  env.ts  format.ts  gateway-api.ts  navigation.ts  public-vps-deploy.test.ts  sidebar-state.ts  tenant-api.ts  theme.ts
web/tenant-console/src/pages/: accounts-page.test.tsx  accounts-page.tsx  alerts-page.tsx  api-keys-page.test.tsx  api-keys-page.tsx  audit-page.tsx  connect-page.test.tsx  connect-page.tsx  dashboard-page.tsx  docs-page.tsx  routing-page.tsx
web/tenant-console/src/session/: store.test.ts  store.ts
web/tenant-console/src/test/: render-app.tsx  setup.ts
web/tenant-console/tests/e2e/: smoke.spec.ts
