[workspace]
members = [
  "apps/control-plane",
  "apps/gateway-http",
  "apps/tenant-api",
  "crates/observability",
  "crates/protocol-core",
  "crates/provider-core",
  "crates/provider-openai-codex",
  "crates/scheduler",
  "crates/storage",
]
resolver = "2"

[workspace.package]
authors = ["lighterEB"]
edition = "2024"
license = "MIT"
repository = "https://github.com/lighterEB/ferrum-gate"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
http = "1.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
