[package]
name = "control-plane"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
observability = { path = "../../crates/observability" }
provider-core = { path = "../../crates/provider-core" }
provider-openai-codex = { path = "../../crates/provider-openai-codex" }
reqwest.workspace = true
scheduler = { path = "../../crates/scheduler" }
serde.workspace = true
serde_json.workspace = true
storage = { path = "../../crates/storage" }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
protocol-core = { path = "../../crates/protocol-core" }
