[package]
name = "control-plane"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
http-utils = { path = "../../crates/http-utils" }
observability = { path = "../../crates/observability" }
provider-anthropic = { path = "../../crates/provider-anthropic" }
provider-core = { path = "../../crates/provider-core" }
provider-openai-codex = { path = "../../crates/provider-openai-codex" }
provider-qwen = { path = "../../crates/provider-qwen" }
reqwest.workspace = true
scheduler = { path = "../../crates/scheduler" }
serde.workspace = true
serde_json.workspace = true
storage = { path = "../../crates/storage" }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
protocol-core = { path = "../../crates/protocol-core" }
