[package]
name = "tenant-api"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
http-utils = { path = "../../crates/http-utils" }
observability = { path = "../../crates/observability" }
protocol-core = { path = "../../crates/protocol-core" }
serde.workspace = true
serde_json.workspace = true
storage = { path = "../../crates/storage" }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
