[package]
name = "provider-openai-codex"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
protocol-core = { path = "../protocol-core" }
provider-core = { path = "../provider-core" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
