[package]
name = "storage"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
provider-core = { path = "../provider-core" }
protocol-core = { path = "../protocol-core" }
rand.workspace = true
scheduler = { path = "../scheduler" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
